Refactor code, improve config handling & docs
Clean up and refactor codebase, harden config handling, and update docs.

Key changes:
- Simplified/cleaned comments and Javadocs across listeners, managers and models.
- Safer config value handling (null checks, Objects.requireNonNullElse) and more robust wand material parsing.
- Improved logging (use java.util.logging.Level and formatted messages).
- PlaytimeManager: split tick logic into helper methods (checkCycleMilestones, tickDebt) and clarified timing calculation.
- Command classes: tightened tab-completion logic, constants for command strings, and improved sender/player checks and return values.
- ZoneManager and PvPManager: reorganized imports, clearer responsibilities, and minor API improvements.
- MessageUtil: minor cleanup and comment updates.
- pom.xml: use maven-compiler-plugin <release> instead of separate source/target.
- README.md rewritten and condensed; install/setup and feature descriptions updated.
- .gitignore extended with common IDE/OS/build entries.
- config.yml minor wording and layout tweaks.

These changes focus on readability, null-safety, and maintainability without altering core behavior.